--- a/app/components/login/login.css
+++ b/app/components/login/login.css
@@ -1,6 +1,6 @@
 .login-container {
-  background-color: #565858;
-  /*background-image: url("res://bg");*/
+  /*background-color: #565858;*/
+  background-image: url("res://tpbg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
