--- a/app/components/login/login.template.html
+++ b/app/components/login/login.template.html
@@ -6,7 +6,7 @@
                     height="auto">
             
             <StackLayout row="0" col="0" class="logo" horizontalAlignment="center">
-                <img src="res://tplogo"/>
+                <img src="res://tplogo" width="75" height="75"/>
             </StackLayout> 
             
             <StackLayout row="2" col="0" class="credentials" horizontalAlignment="center">
